--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app">
-        <img src="logo.png" alt="Krazy Keno Logo" width="150">
+    <header>
+        <img src="logoKK.png" alt="Krazy Keno Logo" class="logo" />
         <h1>KRAZY KENO DASHBOARD</h1>
-        <div id="dataDisplay">Loading data...</div>
-    </div>
+    </header>
+    <main>
+        <div id="content">Loading data...</div>
+    </main>
     <script src="supabase.js"></script>
     <script src="dashboard.js"></script>
 </body>
