--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Krazy Keno Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Krazy Keno Dashboard</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <img src="logoKK.png" alt="Krazy Keno Logo" class="logo" />
-        <h1>KRAZY KENO DASHBOARD</h1>
-    </header>
-    <main>
-        <div id="content">Loading data...</div>
-    </main>
-    <script src="supabase.js"></script>
-    <script src="dashboard.js"></script>
+  <header>
+    <img src="logoKK.png" alt="Krazy Keno Logo" width="200" />
+    <h1>KRAZY KENO DASHBOARD</h1>
+    <p>Live data feed test active</p>
+  </header>
+  <main>
+    <section id="content">Loading Data...</section>
+  </main>
+  <script src="supabase.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 </html>
