--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<html><head><title>Krazy Keno</title></head><body><h1>Krazy Keno LIVE</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Krazy Keno Dashboard</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <img src="logoKK.png" class="logo" alt="Krazy Keno Logo" />
+    <h1>KRAZY KENO LIVE</h1>
+  </header>
+  <nav>
+    <button onclick="showTab('pick')">Pick 5–8</button>
+    <button onclick="showTab('blackjack')">21 Tables</button>
+  </nav>
+  <main>
+    <section id="pick" style="display:block;">
+      <h2>Pick 5 - Top Combos</h2>
+      <ul id="comboChart"></ul>
+    </section>
+    <section id="blackjack" style="display:none;">
+      <h2>Blackjack Tables</h2>
+      <div class="heatmap-grid" id="blackjackGrid">Loading...</div>
+    </section>
+  </main>
+  <script src="supabase.js"></script>
+  <script src="dashboard.js"></script>
+  <script>
+    function showTab(tab) {
+      document.getElementById('pick').style.display = (tab === 'pick') ? 'block' : 'none';
+      document.getElementById('blackjack').style.display = (tab === 'blackjack') ? 'block' : 'none';
+    }
+  </script>
+</body>
+</html>
