--- a/index.html
+++ b/index.html
@@ -1,24 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Krazy Keno Live</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <img src="logoKK.png" alt="Krazy Keno Logo" width="100">
-        <h1>KRAZY KENO LIVE</h1>
-    </header>
-    <nav>
-        <button onclick="loadPickCombos()">Pick 5–8</button>
-        <button onclick="loadBlackjack()">21 Tables</button>
-    </nav>
-    <main id="content">
-        Loading data...
-    </main>
-    <script src="supabase.js"></script>
-    <script src="dashboard.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Krazy Keno Live</title></head><body><h1>KRAZY KENO FINAL</h1></body></html>
