--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>Krazy Keno Live</title></head><body><h1>KRAZY KENO FINAL</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>KRAZY KENO FINAL</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script type="module" src="dashboard.js"></script>
+</head>
+<body>
+  <header>
+    <img src="logoKK.png" alt="Krazy Keno Logo" />
+    <h1>KRAZY KENO FINAL</h1>
+  </header>
+  <main>
+    <section id="content">Loading data...</section>
+  </main>
+</body>
+</html>
