--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KRAZY KENO FINAL</title>
   <link rel="stylesheet" href="styles.css" />
-  <script type="module" src="dashboard.js"></script>
 </head>
 <body>
-  <header>
+  <div id="app">
     <img src="logoKK.png" alt="Krazy Keno Logo" />
     <h1>KRAZY KENO FINAL</h1>
-  </header>
-  <main>
-    <section id="content">Loading data...</section>
-  </main>
+    <div id="content">Loading...</div>
+  </div>
+  <script src="supabase.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 </html>
