--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KRAZY KENO FINAL</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div id="app">
-    <img src="logoKK.png" alt="Krazy Keno Logo" />
-    <h1>KRAZY KENO FINAL</h1>
-    <div id="content">Loading...</div>
-  </div>
   <script src="supabase.js"></script>
   <script src="dashboard.js"></script>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>KRAZY KENO FINAL</h1>
+  <div id="content">Loading...</div>
 </body>
 </html>
